--- a/_config.yml
+++ b/_config.yml
@@ -66,4 +66,4 @@ offer-page:
 
 feature-video:
   cta: Ver Vídeo
-  url: https://www.youtube.com/watch?v=kKZ_Mdnpf-8
+  url: https://www.youtube.com/watch?v=xj2xCkuWRe0
